<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/style_main_color">

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:fontFamily="@font/kopup_d_medium"
        android:gravity="center"
        android:text="@string/developer_info"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />
    <LinearLayout
        android:id="@+id/names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kopup_d_medium"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/developer_JiY"
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kopup_d_medium"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/developer_LHJ"
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kopup_d_medium"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/developer_LHJ_"
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kopup_d_medium"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/developer_LHY"
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_round_button"
        android:layout_margin="40dp"
        android:text="@string/okok"
        android:textColor="@color/main_text"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/names"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>