<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/style_layout_conner"
    android:padding="40dp"
    android:visibility="gone"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tvSignUpPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SNS로 회원가입"
        android:fontFamily="@font/kopup_d_bold"
        android:textColor="@color/main_text"
        android:textSize="20sp"
        android:paddingBottom="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:drawableEndCompat="@drawable/ic_close" />

    <EditText
        android:id="@+id/editSignUpID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kopup_d_bold"
        android:textSize="15sp"
        android:textColor="@color/main_text"
        android:backgroundTint="@color/hint_text"
        android:hint="다른 유저에게 보여질 아이디에요."
        android:textColorHint="@color/hint_text"
        android:drawableStart="@drawable/ic_profile"
        android:drawablePadding="15dp"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignUpPanel"
        android:inputType="text"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvCheckerID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error__already_using_id"
        android:fontFamily="@font/kopup_d_light"
        android:textColor="@color/main_color_start"
        android:textSize="11sp"
        android:paddingBottom="15dp"
        android:layout_marginHorizontal="10dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editSignUpID"
        app:drawableEndCompat="@drawable/ic_warning" />

    <EditText
        android:id="@+id/editSignUpName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kopup_d_bold"
        android:textSize="15sp"
        android:textColor="@color/main_text"
        android:backgroundTint = "@color/hint_text"
        android:hint="@string/user_name"
        android:textColorHint="@color/hint_text"
        android:singleLine="true"
        android:drawableStart="@drawable/head_fill_main_color"
        android:drawablePadding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCheckerID"
        android:inputType="text"
        android:importantForAutofill="no" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSnsSignUpSlide"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/style_main_color_round_button"
        android:text="@string/complete_signup"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editSignUpName"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>